# apple-health

./: .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml  readme.md  requirements.txt  setup.py  sonar-project.properties
.github/workflows/: main.yml  master.yml  publish.yml
apple_health/: __init__.py  classes.py  constants.py  health_data.py  util.py
apple_health/classes/: __init__.py  activity_summary.py  base.py  correlation.py  me.py  record.py  workout.py
apple_health/constants/: __init__.py  correlation.py  me.py  metadata.py  record.py  workout.py
health/: __init__.py  health_data.py  util.py
health/classes/: __init__.py  activity_summary.py  base.py  correlation.py  me.py  record.py  workout.py
health/constants/: correlation.py  me.py
